--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   a:hover { color: #333; text-decoration: none; }
 </style>
 
-<img src="Desktop.png" />
+<img src="Desktop.png" height="300px" />
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
